--- a/www/analysis_bill_sampras_summer_job_decision.html
+++ b/www/analysis_bill_sampras_summer_job_decision.html
@@ -1626,11 +1626,30 @@ display: none;
 </div>
 
 
+<style type="text/css">
+body {
+font-family: 'Verdana', sans-serif;
+}
+#footer {
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: #f2f2f2; 
+color: black; 
+text-align: center;
+padding: 10px 0;
+font-size: 1.2em;
+}
+</style>
 <hr />
 <hr />
 <p>🚧 Under Construction 🚧</p>
 <hr />
 <hr />
+<div id="footer">
+<p>Copyright © 2023- 2023 Sangho Lee, All rights reserved.</p>
+</div>
 
 
 
