--- a/www/analysis_bill_sampras_summer_job_decision.html
+++ b/www/analysis_bill_sampras_summer_job_decision.html
@@ -2937,19 +2937,17 @@ digraph decision_tree {
   Recruiting -&gt; Outcome3 
 }
 &quot;)</code></pre>
-<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-f6eb5556b6ea4ec9aa0f" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-f6eb5556b6ea4ec9aa0f">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\"]\n  Recruiting [label=\"Look for a job through the school’s program\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, salary unknown.\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, salary and position uncertain.\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-3a874e8815bd88e99b74" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-3a874e8815bd88e99b74">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\"]\n  Recruiting [label=\"Look for a job through the school’s program\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, salary unknown.\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, salary and position uncertain.\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 </div>
-<div id="in-the-book-its-unclear-what-the-chances-are-that-vanessa-will-offer-a-job-just-as-there-are-no-specified-probabilities-of-bill-securing-a-job-through-the-schools-program" class="section level4">
-<h4>In the book, it’s unclear what the chances are that Vanessa will
-offer a job, just as there are no specified probabilities of Bill
-securing a job through the school’s program</h4>
+<div id="section" class="section level4">
+<h4></h4>
 </div>
-<div id="this-r-code-is-designed-to-help-bill-visualize-his-dilemma-comprehensively-yet-the-ultimate-decision-hinges-on-his-personal-judgment-and-preferences-as-well-as-additional-information-such-as-the-success-rate-of-the-schools-job-program." class="section level4">
-<h4>This R code is designed to help Bill visualize his dilemma
-comprehensively, yet the ultimate decision hinges on his personal
-judgment and preferences, as well as additional information such as the
-success rate of the school’s job program.</h4>
+<div id="node-is-designed-to-help-bill-visualize-his-dilemma-comprehensively-yet-the-ultimate-decision-hinges-on-his-personal-judgment-and-preferences-as-well-as-additional-information-such-as-the-success-rate-of-the-schools-job-program." class="section level4">
+<h4>Node is designed to help Bill visualize his dilemma comprehensively,
+yet the ultimate decision hinges on his personal judgment and
+preferences, as well as additional information such as the success rate
+of the school’s job program.</h4>
 </div>
 <div id="ultimately-bills-choice-will-be-influenced-by-his-preferences-or-gut-feeling.-for-those-inclined-towards-a-more-secure-route-accepting-johns-offer-might-seem-sensible.-on-the-other-hand-risk-takers-might-prefer-exploring-other-options-in-the-decision-tree." class="section level4">
 <h4>Ultimately, Bill’s choice will be influenced by his preferences or
@@ -2957,9 +2955,12 @@ gut feeling. For those inclined towards a more secure route, accepting
 John’s offer might seem sensible. On the other hand, risk-takers might
 prefer exploring other options in the decision tree.</h4>
 </div>
-<div id="to-make-this-activity-a-little-more-fun-lets-consider-a-hypothetical-scenario" class="section level4">
+<div id="to-make-this-activity-a-little-more-fun-lets-consider-a-hypothetical-scenario-in-the-book-it-provides-some-probabilites-the-chance-that-vanessa-will-offer-a-job-and-bill-also-has-gathered-the-information-from-the-sloan-school-what-the-previuse-students-were-offered." class="section level4">
 <h4>To make this activity a little more fun, let’s consider a
-hypothetical scenario:</h4>
+hypothetical scenario, In the book, it provides some probabilites the
+chance that Vanessa will offer a job, and Bill also has gathered the
+information from the Sloan School what the previuse students were
+offered.</h4>
 <p><br></p>
 </div>
 <div id="the-chance-of-receiving-an-offer-from-john-100" class="section level4">
@@ -2969,26 +2970,53 @@ John: 100%</span></h4>
 <div id="the-expected-income-12000" class="section level4">
 <h4><span style="color:blue">- The expected income: $12,000</span></h4>
 </div>
-<div id="the-probability-of-receiving-vanessas-offer-75" class="section level4">
+<div id="the-probability-of-receiving-vanessas-offer-60" class="section level4">
 <h4><span style="color:blue">- The probability of receiving Vanessa’s
-offer: 75%</span></h4>
+offer: 60%</span></h4>
 </div>
 <div id="the-anticipated-income-14000" class="section level4">
 <h4><span style="color:blue">- The anticipated income:
 $14,000</span></h4>
 </div>
-<div id="the-likelihood-of-obtaining-a-job-through-the-schools-program-85" class="section level4">
+<div id="the-likelihood-of-obtaining-a-job-through-the-schools-program-95" class="section level4">
 <h4><span style="color:blue">- The likelihood of obtaining a job through
-the school’s program: 85%</span></h4>
+the school’s program: 95%</span></h4>
 </div>
 <div id="the-potential-income-range-12000-to-15000" class="section level4">
 <h4><span style="color:blue">- The potential income range: $12,000 to
 $15,000</span></h4>
 </div>
 </div>
-<div id="section" class="section level3">
+<div id="section-1" class="section level3">
 <h3><br></h3>
-<pre class="r"><code>DiagrammeR::grViz(&quot;
+<pre class="r"><code># Probabilities and incomes
+prob_john_offer &lt;- 1.0 
+income_john &lt;- 12000
+
+prob_vanessa_offer &lt;- 0.60  
+income_vanessa &lt;- 14000
+
+prob_school_program &lt;- 0.95  
+income_school_program_avg &lt;- (6000 + 21600) / 2
+
+# Calculate expected values
+expected_value_john &lt;- prob_john_offer * income_john
+
+# For Vanessa&#39;s path, if she doesn&#39;t offer, then Bill goes to the school program
+expected_value_vanessa &lt;- prob_vanessa_offer * income_vanessa + 
+                         (1 - prob_vanessa_offer) * prob_school_program * income_school_program_avg
+
+# For the school program directly (rejecting both John and Vanessa)
+expected_value_school &lt;- prob_school_program * income_school_program_avg
+
+# Print the expected values
+print(expected_value_john)</code></pre>
+<pre><code>## [1] 12000</code></pre>
+<pre class="r"><code>print(expected_value_vanessa)</code></pre>
+<pre><code>## [1] 13644</code></pre>
+<pre class="r"><code>print(expected_value_school)</code></pre>
+<pre><code>## [1] 13110</code></pre>
+<pre class="r"><code>grViz(&quot;
 digraph decision_tree {
 
   # Define node styles
@@ -3001,16 +3029,16 @@ digraph decision_tree {
   # Decision Nodes
   Decision1 [label=&#39;Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000&#39;]
   Decision2 [label=&#39;Decision 2: Reject John’s offer.&#39;]
-  EventA [label=&#39;Event A: Vanessa’s firm offers Bill a job.\\nProb: 75%&#39;, shape = ellipse]
-  EventB [label=&#39;Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 25%&#39;, shape = ellipse]
-  DecisionA1 [label=&#39;Decision A1: Accept Vanessa’s offer.\\nExpected: $14,000&#39;]
-  DecisionA2 [label=&#39;Decision A2: Reject Vanessa’s offer.&#39;]
-  Recruiting [label=&#39;Look for a job through the school’s program\\nProb: 85%&#39;, shape = box3d]
+  EventA [label=&#39;Event A: Vanessa’s firm offers Bill a job.\\nProb: 60%&#39;, shape = ellipse]
+  EventB [label=&#39;Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 40%&#39;, shape = ellipse]
+  DecisionA1 [label=&#39;Decision A1: Accept Vanessa’s offer.\\nProb: 60%\\nExpected: $14,000&#39;]
+  DecisionA2 [label=&#39;Decision A2: Reject Vanessa’s offer.\\nLook for a job through the school’s program&#39;]
+  Recruiting [label=&#39;Engage with the school’s program\\nProb: 95%\\nExpected Range: $6,000 - $21,600&#39;, shape = box3d]
 
   # Outcome Nodes
   Outcome1 [label=&#39;Outcome: Job with John, $12,000.&#39;, shape = plaintext]
-  Outcome2 [label=&#39;Outcome: Job with Vanessa, salary unknown.\\nExpected: $13,368.75&#39;, shape = plaintext]
-  Outcome3 [label=&#39;Outcome: Job through program, salary uncertain.\\nExpected: $11,475&#39;, shape = plaintext]
+  Outcome2 [label=&#39;Outcome: Job with Vanessa, $13,644\\n(If offered)&#39;, shape = plaintext]
+  Outcome3 [label=&#39;Outcome: Job through program, $13,110\\n(Probability weighted avg: $(income_school_program_avg))&#39;, shape = plaintext]
 
   # Connect nodes with edges
   Start -&gt; Decision1 
@@ -3026,12 +3054,12 @@ digraph decision_tree {
   Recruiting -&gt; Outcome3 
 }
 &quot;)</code></pre>
-<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-a67b3e92b15624af0515" style="width:672px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-a67b3e92b15624af0515">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\\nProb: 75%\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 25%\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\\nExpected: $14,000\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\"]\n  Recruiting [label=\"Look for a job through the school’s program\\nProb: 85%\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, salary unknown.\\nExpected: $13,368.75\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, salary uncertain.\\nExpected: $11,475\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
-<div id="given-these-result-the-path-with-the-highest-expected-value-is-waiting-for-vanessas-offer-with-an-expected-value-of-13368.75." class="section level4">
+<div class="grViz html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-cf39c9d457ea48547379" style="width:672px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-cf39c9d457ea48547379">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\\nProb: 60%\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 40%\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\\nProb: 60%\\nExpected: $14,000\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\\nLook for a job through the school’s program\"]\n  Recruiting [label=\"Engage with the school’s program\\nProb: 95%\\nExpected Range: $6,000 - $21,600\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, $13,644\\n(If offered)\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, $13,110\\n(Probability weighted avg: $(income_school_program_avg))\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="given-these-result-the-path-with-the-highest-expected-value-is-waiting-for-vanessas-offer-with-an-expected-value-of-13644." class="section level4">
 <h4>Given these result, the path with the highest expected value is
 <span style="color:blue">waiting for Vanessa’s offer</span>, with an
-expected value of <span style="color:blue">$13,368.75.</span></h4>
+expected value of <span style="color:blue">$13,644.</span></h4>
 </div>
 <div id="however-its-important-to-note-that-this-path-also-carries-more-risk-as-it-relies-on-the-75-probability-of-receiving-vanessas-offer.-if-security-is-a-primary-concern-accepting-johns-offer-would-be-the-most-secure-choice-being-cool-with-a-lower-expected-value-12000." class="section level4">
 <h4>However, it’s important to note that this path also carries more
