--- a/www/bill_sampras_summer_job_decision.html
+++ b/www/bill_sampras_summer_job_decision.html
@@ -373,9 +373,9 @@ font-size: 1.2em;
 <p><strong>Note:</strong> <em>This summary offers a creatively rephrased
 perspective of the original case study. It aims to provide an engaging
 and understandable narrative.</em></p>
-<div id="bio-imagings-development-dilemma-choosing-the-path-to-innovation" class="section level1">
-<h1><strong>Bio-Imaging’s Development Dilemma: Choosing the Path to
-Innovation</strong> <br><br></h1>
+<div id="bill-sampras-summer-of-decisions-navigating-career-crossroads" class="section level1">
+<h1><strong>Bill Sampras’ Summer of Decisions: Navigating Career
+Crossroads</strong> <br><br></h1>
 <p><strong>Part 1</strong><br> Bill Sampras, a diligent MBA student at
 MIT’s Sloan School of Management, was at a pivotal crossroads. With a
 summer looming ahead and two potential job opportunities knocking at his
