--- a/www/analysis_bill_sampras_summer_job_decision.html
+++ b/www/analysis_bill_sampras_summer_job_decision.html
@@ -2858,6 +2858,55 @@ font-size: 1.2em;
 </style>
 <hr />
 <hr />
+<div id="case-summary" class="section level1">
+<h1><strong>Case Summary</strong></h1>
+<p><br><br></p>
+<p><strong>Note:</strong> <em>This summary offers a creatively rephrased
+perspective of the original case study. It aims to provide an engaging
+and understandable narrative.</em></p>
+</div>
+<div id="bill-sampras-summer-of-decisions-navigating-career-crossroads" class="section level1">
+<h1><strong>Bill Sampras’ Summer of Decisions: Navigating Career
+Crossroads</strong> <br><br></h1>
+<p><strong>Part 1</strong><br> Bill Sampras, a diligent MBA student at
+MIT’s Sloan School of Management, was at a pivotal crossroads. With a
+summer looming ahead and two potential job opportunities knocking at his
+door, Bill faced a decision that could shape his career path. Armed with
+experience and ambition, he embarked on a journey to weigh his options
+and make a choice that aligned with his aspirations.<br><br></p>
+<p><strong>Part 2</strong><br> The first contender was a familiar one -
+a return to his roots at the company where he’d spent four impactful
+years. His former boss, John Mason, offered him a secure but
+time-sensitive summer position. This option represented safety and
+familiarity but came with a deadline that pressured Bill for an early
+decision.<br><br></p>
+<p><strong>Part 3</strong><br> On the other side was a conversation with
+Vanessa Parker, Vice President of a prestigious investment banking firm.
+This chance encounter on a flight to Boston had opened the door to a
+potentially lucrative and prestigious summer role. However, this
+opportunity was shrouded in uncertainty, with details only to be
+revealed in the future, testing Bill’s patience and risk
+tolerance.<br><br></p>
+<p><strong>Part 4</strong><br> In the realm of uncertainty, Bill turned
+to decision analysis, constructing a decision tree to map out his
+possible paths. Each branch represented a choice, each node a
+consequence. This analytical approach transformed his dilemma from a
+confusing puzzle into a structured set of sequential decisions and
+possible outcomes.<br><br></p>
+<p><strong>Part 5</strong><br> As Bill navigated this tree of
+possibilities, he considered not just the immediate choices but also the
+potential ramifications each path held. His decision was not merely
+about choosing a job; it was about setting a precedent for how he would
+confront and make significant career decisions under
+uncertainty.<br><br></p>
+<p><strong>Part 6</strong><br> With the decision tree complete and the
+options laid bare, Bill stood ready to make a choice. His journey
+through this analytical process was more than just a method to pick a
+summer job; it was a transformative experience that equipped him with
+the tools and mindset to tackle future uncertainties. Bill’s summer of
+decisions was a testament to the power of strategic thinking and the
+profound impact that thoughtful analysis can have on shaping one’s
+professional journey.<br><br></p>
 <div id="below-i-will-outline-the-nodes-to-construct-the-decision-tree.-here-are-the-bullet-points-detailing-bills-job-related-decision-problem." class="section level3">
 <h3>Below, I will outline the nodes to construct the decision tree. Here
 are the bullet points detailing Bill’s job-related decision
@@ -2941,8 +2990,8 @@ digraph decision_tree {
   Recruiting -&gt; Outcome3 
 }
 &quot;, width = 1600, height = 800)</code></pre>
-<div id="htmlwidget-4fce8f8315be4ed9ca5e" style="width:1600px;height:800px;" class="grViz html-widget "></div>
-<script type="application/json" data-for="htmlwidget-4fce8f8315be4ed9ca5e">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\"]\n  Recruiting [label=\"Look for a job through the school’s program\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, salary unknown.\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, salary and position uncertain.\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-8090f8040ea07d91f01c" style="width:1600px;height:800px;" class="grViz html-widget "></div>
+<script type="application/json" data-for="htmlwidget-8090f8040ea07d91f01c">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\"]\n  Recruiting [label=\"Look for a job through the school’s program\", shape = box3d]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, salary unknown.\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, salary and position uncertain.\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 \n  Decision1 -> Outcome1 \n  Decision2 -> EventA \n  Decision2 -> EventB \n  EventA -> DecisionA1 \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 <div id="section" class="section level4">
 <h4></h4>
@@ -3058,8 +3107,8 @@ digraph decision_tree {
   Recruiting -&gt; Outcome3 
 }
 &quot;, width = 1600, height = 800)</code></pre>
-<div id="htmlwidget-8d65f32088c1f84d77f6" style="width:1600px;height:800px;" class="grViz html-widget "></div>
-<script type="application/json" data-for="htmlwidget-8d65f32088c1f84d77f6">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\\nProb: 60%\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 40%\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\\nProb: 60%\\nExpected: $14,000\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\\nLook for a job through the school’s program\"]\n  Recruiting [label=\"Engage with the school’s program\\nProb: 95%\\nExpected Range: $6,000 - $21,600\", shape = ellipse]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, $13,644\\n(If offered)\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, $13,110\\n(Probability weighted avg: $(income_school_program_avg))\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 [color=red, penwidth=2.0] \n  Decision1 -> Outcome1 \n  Decision2 -> EventA [color=red, penwidth=2.0] \n  Decision2 -> EventB \n  EventA -> DecisionA1 [color=red, penwidth=2.0] \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 [color=red, penwidth=2.0] \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-7d10ba30862a881163c5" style="width:1600px;height:800px;" class="grViz html-widget "></div>
+<script type="application/json" data-for="htmlwidget-7d10ba30862a881163c5">{"x":{"diagram":"\ndigraph decision_tree {\n\n  # Define node styles\n  node [fontname = Helvetica, shape = box]\n  edge [fontname = Helvetica]\n\n  # Start Node\n  Start [label=\"Start Node: Bill’s initial decision.\"]\n\n  # Decision Nodes\n  Decision1 [label=\"Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000\"]\n  Decision2 [label=\"Decision 2: Reject John’s offer.\"]\n  EventA [label=\"Event A: Vanessa’s firm offers Bill a job.\\nProb: 60%\", shape = ellipse]\n  EventB [label=\"Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 40%\", shape = ellipse]\n  DecisionA1 [label=\"Decision A1: Accept Vanessa’s offer.\\nProb: 60%\\nExpected: $14,000\"]\n  DecisionA2 [label=\"Decision A2: Reject Vanessa’s offer.\\nLook for a job through the school’s program\"]\n  Recruiting [label=\"Engage with the school’s program\\nProb: 95%\\nExpected Range: $6,000 - $21,600\", shape = ellipse]\n\n  # Outcome Nodes\n  Outcome1 [label=\"Outcome: Job with John, $12,000.\", shape = plaintext]\n  Outcome2 [label=\"Outcome: Job with Vanessa, $13,644\\n(If offered)\", shape = plaintext]\n  Outcome3 [label=\"Outcome: Job through program, $13,110\\n(Probability weighted avg: $(income_school_program_avg))\", shape = plaintext]\n\n  # Connect nodes with edges\n  Start -> Decision1 \n  Start -> Decision2 [color=red, penwidth=2.0] \n  Decision1 -> Outcome1 \n  Decision2 -> EventA [color=red, penwidth=2.0] \n  Decision2 -> EventB \n  EventA -> DecisionA1 [color=red, penwidth=2.0] \n  EventA -> DecisionA2 \n  EventB -> Recruiting \n  DecisionA1 -> Outcome2 [color=red, penwidth=2.0] \n  DecisionA2 -> Recruiting \n  Recruiting -> Outcome3 \n}\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 <div id="given-these-result-the-path-with-the-highest-expected-value-is-waiting-for-vanessas-offer-with-an-expected-value-of-13644." class="section level4">
 <h4>Given these result, the path with the highest expected value is
 <span style="color:blue">waiting for Vanessa’s offer</span>, with an
@@ -3091,6 +3140,7 @@ value.</em></h4>
 <hr />
 <div id="footer">
 <p>Copyright © 2023- 2024 Sangho Lee, All rights reserved.</p>
+</div>
 </div>
 </div>
 </div>
